# calculator

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/design/v0.1.0/: HLD.md
docs/design/v0.2.0/: HLD.md
docs/design/v0.3.0/: HLD.md
docs/design/v0.4.0/: HLD.md
docs/design/v0.5.0/: HLD.md
docs/research/v0.1.0/: 02-implementation-language-and-build-tooling.md  04-error-taxonomy-and-exit-codes.md  07-project-layout-makefile-conventions.md  lexer-design.md  numeric-representation.md  parser-architecture.md  testing-strategy.md
docs/research/v0.2.0/: 38-parser-extensibility.md  39-function-registry-and-constant-table.md  40-domain-error-detection-strategy.md  41-round-tie-breaking.md  42-test-infrastructure.md  43-constant-vs-function-namespace.md  44-output-formatting-for-function-results.md  53-lexer-ident-token-and-function-call-grammar.md  54-function-dispatch-table-design.md  55-error-class-design-for-parameterized-messages.md  56-constants-and-future-variable-symbol-table.md  57-verify-format-result-spec-output.md  58-test-distribution-strategy.md  65-comma-token-type-vs-unknown-fallthrough.md  66-scan-number-consumes-e-unconditionally.md  67-evaluate-return-type-union.md  68-errors-py-refactor-migration.md  (+6 more)
docs/specs/: v0.1.0-dcuukex0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md
src/calc/: __main__.py  errors.py  evaluator.py  lexer.py  parser.py  plotter.py  png.py
tests/: test_cli.py  test_errors.py  test_evaluator.py  test_lexer.py  test_parser.py  test_plot.py  test_plotter.py  test_png.py  test_renderer.py
(+49 files in other folders)
