[project]
name = "calc"
version = "0.1.0"
requires-python = ">=3.12"

[project.scripts]
calc = "calc.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.9"]
